assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Lora&display=swap');

html {
    overflow-x: hidden;
}
body {
    color: rgb(0, 0, 0);
    font-family: 'lato', sans-serif;
    text-align: center;
    background-image: url("../images/background-main-image.jpg");
    background-repeat: no-repeat;
    background-position: top center;
    background-size: cover;
    height: 100% !important;
    overflow-x: hidden;
}

h1{
    color: black;
    font-size: 3rem;
    padding-top: 25px;
    text-decoration: underline;
}

#title {
    padding: 30px 10px 150px;
    text-decoration: underline;
}
#greeting-title{
    font-weight: bolder;
}

#greeting-text {
    line-height: 250%;
}

.container1 {
    margin: auto;
    background-color: rgba(255, 255, 255, 0.5);
    width: 85%;
    height: 100vh;
    align-content: center;
}

.btn{
    background-color: rgba(255, 255, 255, 0.65);
    border: 1px solid rgba(255, 255, 255, 0.65);
    border-radius: 10px;
    margin: 7.5px;
    padding: 15px;
    font-size: large;
    cursor: pointer;
    display: inline-block;
    text-decoration: none;
    transition: all 0.5s ease;
}
.btn:hover, button:hover, .info-box .rules-buttons button:hover {
    background-color: white;
    border: 1px solid #c7c2c2c2;
    transition: all 0.5s ease;
}

#answer-btn {
    box-sizing: border-box;
}

.start-btn {
    margin: 100px auto 0;
    padding: 20px 25px;
    font-weight: 600;
    font-size: 1.5rem;
}

.info-box {
    margin: 100px auto 0;
    height: 50%;
    width: 65%;
    background:rgba(255, 255, 255, 0.65);
    border-radius: 10px;
    padding: 15px;
}

.quiz-box {
    margin: 100px auto 0;
    height: 60%;
    width: 65%;
    background:rgba(255, 255, 255, 0.65);
    border-radius: 10px;
    padding: 15px;    
}

.results-box {
    margin: 100px auto 0;
    height: 60%;
    width: 65%;
    background:rgba(255, 255, 255, 0.65);
    border-radius: 10px;
    padding: 15px;
}

.info-box .info-title {
    height: 40px;   
    width: 100%;
    border-bottom: 1px solid #c7c2c2c2;
    align-items: center;
    font-size: 1.5rem;
    font-weight: 600;
    line-height: 150%;
    letter-spacing: 1.5px;
}

.info-box .rules-list {
    padding: 15px;
}
.info-box .rules-list .info {
    margin: 7.5px 0;
    font-size: 1.2rem;
    line-height: 25px;
}

.info-box .rules-list .info span {
    font-weight: 900;
}

.info-box .rules-buttons {
    margin: auto;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 45px;
}

.info-box .rules-buttons button {
    margin: auto;
    height: 50px;
    width: 175px;
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0.65);
    border: 1px solid rgba(255, 255, 255, 0.65);
    font-size: 1.1rem;
    font-weight: 600;
    border: none;
    cursor: pointer;
    transition: all 0.5s ease;
}

.quiz-box header {
    height: 60px;
    padding: 5px 15px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid #c7c2c2c2;
    line-height: 150%;
    letter-spacing: 1.5px;
}

.quiz-box header .title {
    font-size: 1.3rem;
    font-weight: 600;
}

.quiz-box header .score-box {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 120px;
    height: 50px;
    background-color: #c7c2c2c2;
    border: 1px solid #c7c2c2c2;
    border-radius: 10px;
    padding: 0 10px;
    font-size: 1.1rem;
    font-weight: 600;
}

.quiz-box header .score-box .score-text {
    user-select: none;
}

.quiz-box header .correct-answers {
    background-color: rgba(255, 255, 255, 0.65);
    border: 1px solid rgba(255, 255, 255, 0.65);
    border-radius: 10px;
    padding: 5px;
}

.quiz-box div .question {
    font-size: 1.2rem;
    padding: 10px 0;
}

.quiz-box div .answer-list {
    padding: 25px 0;
    display: block;
}

div .answer-list .answer-option {
    background-color: rgba(255, 255, 255, 0.7);
    border: 1px solid rgba(255, 255, 255, 0.7);
    padding: 5px 0;
    border-radius: 10px;
    margin-bottom: 10px;
    cursor: pointer;
    font-size: 1.2rem;
    font-weight: bold;
    transition: all 0.5s ease;
}

.answer-list .answer-option:last-child{
    margin-bottom: 0px;
}

div .answer-list .answer-option:hover {
    background-color: white;
    border: 1px solid #c7c2c2c2;
}

.quiz-box footer {
    height: 75px;
    width: 100%;
    align-self: center;
    padding: 0 10px;
}

.quiz-box footer .total-questions div {
    margin-top: 25px;
    user-select: none;
    width: 100%;
    padding: 0 7.5px;
    font-weight: 400;
}

.quiz-box footer .total-questions div span{
    font-weight: 700;
    padding: 0 5px;
}

footer .total-questions div:first-child {
    padding-left: 0px;
}

.results-box .completed-text {
    font-size: 1.3rem;
    margin-bottom: 10px;
}

.results-box .completed-text h2 {
    font-size: 3rem;
    font-weight: 700;
    line-height: 10px;
    margin-bottom: 50px;
    letter-spacing: 2px;
}

.results-box .results-text div {
    font-size: 1.3rem;
    margin: 20px 0;
}

.results-box .results-text div span {
    font-weight: 700;
    padding: 0 5px;
}

.results-box .buttons {
    margin: 15px 0;
}


.results-box .buttons button{
    margin: 0 20px;
    height: 75px;
    width: 125px;
    background: #c7c2c2c2;
    margin: 10px 20px 0 0;
    border: 1px solid #c7c2c2c2;
    border-radius: 10px;
    cursor: pointer;
    font-size: 1.2rem;
    font-weight: 500;
    transition: all 0.5s ease;;
}


.results-box .buttons button:hover {
    background-color:#929191c2;
    border: 1px solid #929191c2;
}

.hidden {
    display: none;
}

@media screen and (max-width:720px) {
    .results-box .completed-text h2 {
        font-size: 2rem;
    }
}

@media screen and (max-width: 575px) {
    .info-box {
        margin: 40px auto 0;
        width: 70%;
        height: 55%;
        font-size: .9rem;
    }
    .quiz-box {
        margin: 40px auto 0;
        width: 70%;
        height: 55%;
        font-size: .9rem;
    }
}

@media screen and (max-width:450px) {
    .results-box .completed-text h2 {
        font-size: 1.5rem;
    }
    .quiz-box {
        height: 65%;
    }
    div .answer-list .answer-option {
        font-size: 0.9rem;
    }
}

@media screen and (max-width:400px) {
    .info-box {
        height: 65%;
        margin: 30px auto 0;
    }
    
    .quiz-box{
        margin: 30px auto 0;
        height: 85%;
    }

    .info-box .info-title {
        font-size: 1.2rem;
    }
    .quiz-box header {
        font-size: 1rem;
        width: 90%;
        letter-spacing: 1px;
    }
    .info-box .rules-buttons{
        justify-content: center;
    }
    .info-box .rules-buttons button {
        width: 100px;
        height: 40px;
        font-size: .9rem;
    }
}


@media screen and (max-width:360px) {
    .info-box, .quiz-box {
        margin: 30px auto 0;
        width: 75%;
        height: 75%;
    }
    .results-box .completed-text h2 {
        font-size: 1rem;
    }
}

